--- a/package.json
+++ b/package.json
@@ -2,5 +2,28 @@
   "dependencies": {
     "express": "^4.18.1",
     "node": "^18.4.0"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "twemojiapi",
+  "description": "Basic Twemoji API",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts":
+  {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/akincagatay/twemoji-api.git"
+  },
+  "author": "akincagatay",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/akincagatay/twemoji-api/issues"
+  },
+  "homepage": "https://github.com/akincagatay/twemoji-api#readme"
 }
